# covid-genoma-analysis

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
